# acom-fault-decoder

./: .gitignore  README.md
.github/workflows/: build.yml
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  lib 2.rs  lib.rs  main.rs  serial.rs
src-tauri/src/decoder/: diagnosis.rs  error_codes.rs  flags.rs  legacy 2.rs  legacy.rs  mod.rs  parameters.rs  signature.rs
