[package]
name = "acom-fault-decoder"
version = "1.0.0-alpha"
description = "Professional desktop application for decoding ACOM amplifier fault signatures"
authors = ["The DX Shop / GW4WND"]
edition = "2021"

[lib]
name = "acom_fault_decoder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri            = { version = "2.0", features = ["devtools"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-log    = "2.0"
tauri-plugin-shell  = "2.0"

serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.3"
bitflags   = "2.4"
thiserror  = "1.0"
log        = "0.4"
